src/app/components/VideoPlayer/VideoPlayer.module.css
.title {
    position: absolute;
    z-index: 100;
    top: 15%;
    color: #F5F5F5;
    font-size: 90px;
    font-style: normal;
    font-weight: 500;
    padding: 2rem;
    white-space: pre-line;
    line-height: 118px; /* 107.273% */
  }

  .invisibleInMobile {
  }

  .visibleInMobile {
    display: none !important;
  }


  /* Media query for mobile big screen */
@media (max-width: 1000px) {
    .title {
        font-size: 48px;
        line-height: 52px;
        padding: 1rem;
        margin-bottom: 1rem;
        padding-top: 4rem;
    }
}

  /* Media query for mobile small screen */
@media (max-width: 800px) {
    .title {
        font-size: 32px;
        line-height: 36px;
        padding-top: 3rem;
    }
}

